--- a/Day1/style/style.css
+++ b/Day1/style/style.css
@@ -8,22 +8,29 @@ body {
 }
 
 #gamesearch {
-  padding: 10px;
-  margin: 10px;
+  padding: 5px;
+  margin-top: 10px;
 }
 
 .bSearch {
-  padding: 10px;
-  margin: 10px;
+  padding: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .game {
   background-color: white;
-  margin: 15px;
+  margin-top: 15px;
   padding: 10px;
   text-align: center;
   border: solid black 1px;
   border-radius: 20px;
+  color: black;
+}
+
+.divlink {
+  display: block;
+  color: black;
 }
 
 .footer-box, .github {
